WIP: #42 fix layout on mobile

--- a/src/app/pages/connect/components/content/connect-content.component.scss
+++ b/src/app/pages/connect/components/content/connect-content.component.scss
@@ -1,8 +1,10 @@
 @use "material";
 @use "text";
+@use "variables";
 
 .ps-connect-content {
   background-color: material.$ps-primary-default-color;
+  padding: variables.$ps-spacing 0;
 
   .headline {
     &-gt-xs {
