--- a/src/app/pages/dance/components/content/dance-content.component.scss
+++ b/src/app/pages/dance/components/content/dance-content.component.scss
@@ -5,6 +5,7 @@
 
 .ps-dance-content {
   background-color: material.$ps-primary-default-color;
+  padding: variables.$ps-spacing 0;
   text-align: center;
 
   .headline {
