--- a/src/app/shared/content-container/content-container.component.scss
+++ b/src/app/shared/content-container/content-container.component.scss
@@ -1,1 +1,5 @@
+@use "variables";
 
+.ps-content-container {
+  margin: 0 variables.$ps-spacing;
+}
